tests/NormalTests/paczka1/fuzzy1/99119277.err
Error in line 2: bzOMDjPtlr A678 33,1
Error in line 6: aw5 S434 17,3
Error in line 13: aw5 A678 86,2
Error in line 18: aw5 S661 11,8
Error in line 19: tJ2 S326 53,0
Error in line 33: Qkdz A678 32,1
